Bugfix/claim-button-visibility * Closes #14 * fixed visibility of claim buttons for host, spectators and players * Slight refactor of lobby.css   - removed .disabled   - removed .faded   - changed all objects that used .disabled to .hidden   - changed all objects that used .faded to .disabled * lobby9.js   - new var: buttons{}: for easier referencing (i.e. buttons["red"])

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -999,12 +999,6 @@ i {
     padding-right: 0px;
 }
 
-
-
-
-.disabled{
-    display:none;
-}
 .unhide {
     display: inline !important;
 }
@@ -1019,7 +1013,6 @@ i {
     visibility: visible !important;
     /* display:block; */
 }
-
 
 
 
